[package]
name = "pixel-editor"
version = "0.1.0"
authors = ["Alexey Zaycev <alexej3ajtsev@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.118", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.46"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'console'
]
[features]
default = ["console_error_panic_hook", "wee_alloc"]